! Fixed the draft saving fix. Should work everywhere as designed, now. The latest issue was that I was testing against 'message' instead of 'draftInfo.message'... (post.js) ! Fixed various problems with blog mod in Display pages. First of all, first_new_message was incorrectly set because it didn't take $include_first into account. Secondly, $counter would return -1 for the blog post. Fixed that. Also, doublepost merging was broken in blog mode. It tested for the first message retrieved the incorrect last message ID for the last page, and it got mixed up overall with the blog post. Finally, I'm optimizing the code a bit by not providing a last_msg_id when merging posts isn't available anyway (like, the previous post isn't yours...) (Display.php) ! Okay, sometimes I'm ahead of my time. Changing the maximum width for definition lists in the stats area proved to generate some amusing layout bugs. (sections.css)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -1107,7 +1107,7 @@ dl.stats
 	overflow: hidden
 	margin, padding: 0
 	dt, dd
-		max-width: 90%
+		width: 54%
 		margin: 0 0 4px
 		padding: 0
 		font-size: 1em
